[gd_scene load_steps=25 format=3 uid="uid://bl7v010vvtb3m"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_ip7ai"]
[ext_resource type="Texture2D" uid="uid://m15dqhfr5yak" path="res://player.png" id="2_bksuf"]
[ext_resource type="Texture2D" uid="uid://bknjsx0lsrpe8" path="res://assets/player/shadow.png" id="3_vi4y8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_twoeq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7y5d3"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy4je"]
atlas = ExtResource("2_bksuf")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp2gp"]
atlas = ExtResource("2_bksuf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_568k5"]
atlas = ExtResource("2_bksuf")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs18w"]
atlas = ExtResource("2_bksuf")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo1ed"]
atlas = ExtResource("2_bksuf")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1jlm"]
atlas = ExtResource("2_bksuf")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0rig"]
atlas = ExtResource("2_bksuf")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn2hy"]
atlas = ExtResource("2_bksuf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv2q8"]
atlas = ExtResource("2_bksuf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xecuc"]
atlas = ExtResource("2_bksuf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cibxx"]
atlas = ExtResource("2_bksuf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djde2"]
atlas = ExtResource("2_bksuf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n5t3"]
atlas = ExtResource("2_bksuf")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht7vb"]
atlas = ExtResource("2_bksuf")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4bjb"]
atlas = ExtResource("2_bksuf")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5db0t"]
atlas = ExtResource("2_bksuf")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63s48"]
atlas = ExtResource("2_bksuf")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5mrn"]
atlas = ExtResource("2_bksuf")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h27vn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy4je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp2gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_568k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs18w")
}],
"loop": false,
"name": &"dash",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo1ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1jlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0rig")
}],
"loop": false,
"name": &"down",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn2hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv2q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xecuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cibxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djde2")
}],
"loop": true,
"name": &"idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n5t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht7vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4bjb")
}],
"loop": false,
"name": &"up",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5db0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63s48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5mrn")
}],
"loop": false,
"name": &"walk",
"speed": 13.0
}]

[node name="Player" type="Node2D" groups=["player"]]
y_sort_enabled = true
script = ExtResource("1_ip7ai")

[node name="UpgradeCollider" type="Area2D" parent="." groups=["upgrade_collider"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeCollider"]
shape = SubResource("CircleShape2D_twoeq")

[node name="Placer" type="Node2D" parent="."]
top_level = true

[node name="LeftCheck" type="Area2D" parent="Placer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placer/LeftCheck"]
position = Vector2(-32, 0)
shape = SubResource("RectangleShape2D_7y5d3")

[node name="RightCheck" type="Area2D" parent="Placer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placer/RightCheck"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_7y5d3")

[node name="UpCheck" type="Area2D" parent="Placer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placer/UpCheck"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_7y5d3")

[node name="DownCheck" type="Area2D" parent="Placer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placer/DownCheck"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_7y5d3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_h27vn")
animation = &"up"
autoplay = "idle"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/player/player.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false
}

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1, 15)
scale = Vector2(1, 0.937)
texture = ExtResource("3_vi4y8")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
